# hal-9000

client/: package.json  tailwind.config.ts  tsconfig.json
client/app/: layout.tsx  page.tsx
client/app/components/: button.component.tsx  hal.component.tsx  input.component.tsx  prompts.component.tsx  slot.component.tsx  switches.component.tsx  textbox.component.tsx
server/: main.py  pyproject.toml  test.py
