[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Carl Zhang <zhang.carl.x@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.0"
fastapi = "0.104.1"
uvicorn = {extras = ["standard"], version = "0.24.0.post1"}
openai = "1.3.8"
pydantic = "2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
